# vnm_plot

./: .cirrus.yml  .gitattributes  .gitignore  ADJACENCY_LINE_RENDERING.md  CMakeLists.txt  LICENSE.txt  MODULARIZATION_REPORT.md  MULTI_YAXIS_SPEC.md  MULTI_YAXIS_SPEC_REVIEW.md  README.md  REFACTORING_BRIEF.md  TODO.md  VNM_PLOT_ARCHITECTURE_AND_STACKING_REVIEW.md  VNM_PLOT_IMPLEMENTATION_PLAN.md  phase_2_done.md  phase_3_done.md  vnm_plot.qrc
.github/workflows/: build.yml  ci-freebsd.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
benchmark/: ARCHITECTURE.md  CMakeLists.txt  README.md
benchmark/include/: allocation_tracker.h  benchmark_build_metadata.h.in  benchmark_constants.h  benchmark_data_source.h  benchmark_frame.h  benchmark_profiler.h  benchmark_window.h  brownian_generator.h  path_io.h  publication_rate_clock.h  ring_buffer.h  sample_types.h
benchmark/src/: allocation_tracker.cpp  benchmark_frame.cpp  benchmark_window.cpp  main.cpp  test_benchmark_data_source.cpp  test_benchmark_profiler.cpp  test_brownian_generator.cpp  test_ring_buffer.cpp
benchmark/tools/: approve_gate.py  calibrate.py  phase_trace.py  run_gate.py  test_approve_gate.py  test_calibrate.py  test_phase_trace_flush.py  test_run_gate.py  validate_smoke.py
benchmark_headless/: CMakeLists.txt  main.cpp
cmake/: EmbedAssets.cmake  generate_embedded_assets.py  vnm_plot-config.cmake.in  workspace_deps_overrides.cmake
docs/: refactoring_plan.md  vnm_plot_dead_code_report.md
examples/: CMakeLists.txt
examples/common/: function_sample_source.h
examples/function_plotter/: CMakeLists.txt  app_icon.rc  function_plotter.cpp  function_plotter.h  main.cpp  resources.qrc  test_function_plotter_stacking.cpp
examples/function_plotter/qml/: PlotView.qml  StyleToggleButton.qml  ValidatingSpinBox.qml  main.qml
examples/function_plotter/tests/: tst_plot_indicator.qml  tst_validating_spin_box.qml
examples/hello_plot/: CMakeLists.txt
examples/hello_plot/qml/: main.qml
examples/hello_plot/src/: main.cpp  plot_controller.cpp  plot_controller.h
examples/preview_config/: CMakeLists.txt
examples/preview_config/qml/: main.qml
examples/preview_config/src/: example_utils.h  main.cpp  preview_controller.cpp  preview_controller.h  top_controller.cpp  top_controller.h
examples/standalone_glfw/: CMakeLists.txt  main.cpp
include/vnm_plot/: color_palette.h  core.h  data_source.h  function_sample.h  plot_algo.h  plot_config.h  plot_interaction_item.h  plot_renderer.h  plot_types.h  plot_widget.h  qt.h  render_types.h  rhi.h  vnm_plot.h
include/vnm_plot/core/: access_policy.h  algo.h  asset_loader.h  basic_series_builder.h  chrome_renderer.h  color_palette.h  constants.h  core_types.h  data_types.h  default_shaders.h  font_renderer.h  function_sample.h  gl_program.h  gpu_sample.h  layout_calculator.h  layout_types.h  lcd.h  platform_paths.h  plot_config.h  plot_core.h  primitive_renderer.h  range_cache.h  render_types.h  series_builder.h  series_renderer.h  series_window.h  sha256.h  text_lcd.h  text_renderer.h  time_grid.h  time_units.h  tls_registry.h  types.h  utf8_utils.h  vertex_layout.h
include/vnm_plot/internal/: tls_registry.h
include/vnm_plot/layout/: layout_calculator.h
include/vnm_plot/qt/: plot_interaction_item.h  plot_renderer.h  plot_time_axis.h  plot_widget.h  qrhi_series_layer.h  vnm_qt_safe_dispatch.h
include/vnm_plot/renderers/: font_renderer.h  (+4 more)
qml/VnmPlot/: PlotIndicator.qml  PlotView.qml  qmldir
reviews/: hold_forward_alignment_report_2026-02-12.md  vnm_plot_api_review_2026-02-07.md
shaders/: function_sample.vert  generic_rect.frag  generic_rect.geom  generic_rect.vert  grid_quad.frag  grid_quad.vert  msdf_text.frag  msdf_text.vert  plot_area.frag  plot_area.geom  plot_area.vert  plot_colormap_line.frag  plot_colormap_line.vert  plot_colormap_line_adjacency.geom  plot_dot.frag  plot_dot.geom  plot_dot_quad.frag  plot_dot_quad.geom  plot_dot_quad.vert  plot_line.frag  plot_line.geom  plot_line.vert  plot_line_adjacency.geom
shaders/qsb/: generic_rect.frag  generic_rect.vert  grid_quad.frag  grid_quad.vert  msdf_text.frag  msdf_text.vert  plot_area.frag  plot_area.vert  plot_colormap_line.frag  plot_colormap_line.vert  plot_dot_quad.frag  plot_dot_quad.vert  plot_line.frag  plot_line.vert  uniform_blocks.glsl
src/: plot_interaction_item.cpp  plot_renderer.cpp  plot_widget.cpp
src/core/: asset_loader.cpp  auto_range_resolver.cpp  auto_range_resolver.h  chrome_renderer.cpp  default_shaders.cpp  font_renderer.cpp  font_renderer_stub.cpp  frame_range_planner.cpp  frame_range_planner.h  gl_program.cpp  label_fade_tracker.h  label_pane_geometry.h  layout_calculator.cpp  lcd_policy.h  msdf_text_api_guard.cpp  platform_paths.cpp  platform_paths.h  plot_core.cpp  primitive_renderer.cpp  rhi_helpers.h  series_renderer.cpp  series_window_planner.cpp  series_window_planner.h  sha256.h  text_lcd_policy.h  text_renderer.cpp  text_renderer_stub.cpp  time_grid.cpp  tls_registry.h  types.cpp  utf8_utils.cpp  utf8_utils.h  vertex_layout.cpp
src/layout/: layout_calculator.cpp
src/qt/: lcd_resolver.cpp  lcd_resolver.h  plot_interaction_item.cpp  plot_renderer.cpp  plot_renderer.h  plot_time_axis.cpp  plot_widget.cpp  t_axis_adjust.h  text_lcd_resolver.cpp  text_lcd_resolver.h
src/renderers/: chrome_renderer.cpp  font_renderer.cpp  font_renderer_stub.cpp  primitive_renderer.cpp  series_renderer.cpp  text_renderer.cpp  text_renderer_stub.cpp
tests/: CMakeLists.txt  package_smoke.cmake  test_asset_loader.cpp  test_cache_invalidation.cpp  test_concurrent_series.cpp  test_core_algo.cpp  test_data_source_queries.cpp  test_font_disk_cache.cpp  test_font_renderer_bounds.cpp  test_function_sample_source.cpp  test_gpu_sample_origin.cpp  test_label_pane_geometry.cpp  test_layout_calculator.cpp  test_lcd_resolver.cpp  test_macros.h  test_msdf_lcd_shader_reference.cpp  test_plot_interaction_item.cpp  test_plot_time_axis.cpp  test_qrhi_layer_lifecycle.cpp  test_qrhi_public_api.cpp  test_rhi_helpers.cpp  test_snapshot_caching.cpp  test_text_lcd_resolver.cpp  test_time_grid.cpp  test_typed_api.cpp
(+10 files in other folders)
